# feedscope

./: .gitignore  README.md  progress.md  pyproject.toml
feedscope/: cli.py  config.py
feedscope/fetchers/: arxiv.py  base.py  hn.py
src/feedscope/: __init__.py  cli.py  exporter.py  models.py  orchestrator.py
src/feedscope/fetchers/: arxiv.py  base.py  hn.py
tests/: test_arxiv_fetcher.py  test_cli.py  test_hn_fetcher.py  test_models.py  test_orchestrator.py
