[project]
name = "feedscope"
version = "0.1.0"
description = "Async multi-source aggregator (arXiv + Hacker News) — Project 0 of AI Agent Engineer Path"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Haichuan Zhou" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
feedscope = "feedscope.cli:app"

[build-system]
requires = ["uv_build>=0.4.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "feedscope"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

# ---------- Tooling ----------

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = ["src"] 
files = ["src/feedscope", "tests"]
warn_unused_configs = true
plugins = ["pydantic.mypy"] 

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
